sfdx-spa-alcala/force-app/main/default/objects/Year__c/fields/Misc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Misc_Fee__c</fullName>
    <label>Misc Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>