sfdx-spa-alcala/force-app/main/default/objects/Year__c/fields/School_Level__c.field-meta.xml
<CustomField>
    <fullName>School_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Level</label>
    <referenceTo>School_Level__c</referenceTo>
    <relationshipLabel>Years</relationshipLabel>
    <relationshipName>Years</relationshipName>
    <type>Lookup</type>
</CustomField>