sfdx-spa-alcala/force-app/main/default/objects/Year__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Fee__c</columns>
    <columns>Base_Fee__c</columns>
    <columns>School_Level__c</columns>
    <columns>School_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>